--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Rivers-edge-2012-safety-recall : Rivers Edge 2012 Safety Recall" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Rivers Edge 2012 Safety Recall by JaimeHelgeson</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Rivers-edge-2012-safety-recall</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Rivers-edge-2012-safety-recall</h1>
-          <h2 id="project_tagline">Rivers Edge 2012 Safety Recall</h2>
+      <section>
+        <div id="title">
+          <h1>Rivers Edge 2012 Safety Recall</h1>
+          <p>Rivers Edge 2012 Safety Recall</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/JaimeHelgeson">JaimeHelgeson</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <h1>Rivers Edge 2012 Safety Recall</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p><img src="http://www.huntriversedge.com/recall/2012/safety.html" alt="Rivers Edge 2012 Safety Recall"></p>
+<p><img src="huntriversedge.com/recall/2012/safety.html" alt="Rivers Edge Recall Information"><a href="http://www.huntriversedge.com/recall/2012/safety.html">Rivers Edge Recall</a></p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Rivers-edge-2012-safety-recall maintained by <a href="https://github.com/JaimeHelgeson">JaimeHelgeson</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
