Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,46 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Rivers Edge 2012 Safety Recall by JaimeHelgeson</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Rivers Edge 2012 Safety Recall</h1>
-          <p>Rivers Edge 2012 Safety Recall</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/JaimeHelgeson">JaimeHelgeson</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
-        </div>
-
+      <header class="without-description">
         <h1>Rivers Edge 2012 Safety Recall</h1>
+        <p></p>
+        <p class="view"><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall">View the Project on GitHub <small>JaimeHelgeson/Rivers-Edge-2012-Safety-Recall</small></a></p>
+        <ul>
+          <li><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/JaimeHelgeson/Rivers-Edge-2012-Safety-Recall">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1><strong>Rivers Edge 2012 Safety Recall</strong></h1>
 
-<p><img src="huntriversedge.com/recall/2012/safety.html" alt="Rivers Edge Recall Information"><a href="http://www.huntriversedge.com/recall/2012/safety.html">Rivers Edge Recall</a></p>
+<p><img src="huntriversedge.com/recall/2012/safety.html" alt="Rivers Edge Recall Information"></p>
+
+<h2><a href="http://www.huntriversedge.com/recall/2012/safety.html">Rivers Edge Recall</a></h2>
       </section>
-
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/JaimeHelgeson">JaimeHelgeson</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
